--- a/herbivore.html
+++ b/herbivore.html
@@ -15,7 +15,7 @@
 
         <div class="nav"> 
             <a href="index.html">home&nbsp;&nbsp;&nbsp;&nbsp;</a>
-            <a href="https://drive.google.com/file/d/1Z-s71Up5PK8Y1sd39cOHhI7ug4mGq-XT/view?usp=sharing" target="_blank" rel="noreferrer noopener">resume</a>
+            <a href="https://drive.google.com/file/d/10OwPW1MpB2uGmNN8hvXwRRuYkLtdzjWK/view?usp=share_link" target="_blank" rel="noreferrer noopener">resume</a>
         </div>
         
     
