--- a/aw.html
+++ b/aw.html
@@ -7,6 +7,7 @@
         <title>Whitney Schwitter</title>
         <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.cdnfonts.com/css/circular-std" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">
         <script src="app.js"></script>
 
@@ -76,6 +77,11 @@
             <span class="pink-highlight" style="background-color:#769D91">ready to return home?</span>
         </a>
     
+
+        <div class="arrow bounce">
+            <button onclick="toTop()" class="btn"><span class="material-symbols-outlined md-48">keyboard_double_arrow_up</span></button>
+        </div>
+
     </body>
 
 </html>
