--- a/climber.html
+++ b/climber.html
@@ -26,7 +26,8 @@
         As the computer science point person, I was in charge of the hardware (Adafruit Circuit Board) and software (Arduino). My other two team members focused on the mechanical and visual design of the project. </p>
 
           <div class="video-content">
-                    <video id="glass" autoplay muted loop>
+                    <video id="glass" autoplay muted loop width="500" height="750" display="block";
+                    margin="0 auto">
                         <source src="images/climb.mov" type="video/mp4">
                     </video> 
     
