--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>Hi! I'm <span class="yellow-highlight1"> Whitney Schwitter </span>, an aspiring UX designer & front-end
         developer with a passion for bringing people together through inclusive design & technology.</h1>
 
-        <h2>Currently: I am finishing my undergraduate degree at Wesleyan University. Check out some of my projects:</h2>
+        <h2>Check out some of my projects:</h2>
         
         <!--row 1-->
         <div class="row">
