--- a/aw.html
+++ b/aw.html
@@ -57,7 +57,7 @@
     
             <h2 style="line-height:25px"><br><i>2. bandana design</i></h2>
 
-                <p style="font-size:20px;padding-bottom:2%;">- designed custom Amber Waves bandanas for annual summer fundraiser</p>
+                <p style="font-size:20px;padding-bottom:2%;">- assisted in design and production of custom Amber Waves bandanas for annual summer fundraiser</p>
 
                 <div style="width:100%;height:400px;">
                     <img src="images/b1.png" style="float:left;width:32%;height:100%;object-fit:scale-down;padding-left:2%;margin-bottom:2%;margin-right:1%">
