--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
       
  
-        <div class ="footer">let's chat! whitneyschwitter@gmail.com
+        <div class ="footer">let's chat! wschwitter@wesleyan.edu 
         </div>
     
         <div class="arrow bounce">
