--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </head>
     <body>
 
-        <div class="nav"> 
+        <div class="nav-main"> 
             <a href="https://drive.google.com/file/d/1Z-s71Up5PK8Y1sd39cOHhI7ug4mGq-XT/view?usp=sharing" target="_blank" rel="noreferrer noopener">resume</a>
         </div>
         
