--- a/wesconnect.html
+++ b/wesconnect.html
@@ -23,9 +23,7 @@
 					<header id="header" class="alt">
 						<div class="features">
 							<li>
-									<div class="content">
-										<img src="images/wesconnect/logo.png">
-									</div>
+								<img src="images/wesconnect/logo.png" style="border-radius:10px;display:block;margin-left:auto;margin-right:auto;width:75%;">
 							</li>
 						</div>
 					</header>
@@ -38,7 +36,7 @@
 								<h2 style="font-weight:550;">Project Overview</h2>
 								<br>
 								<p>WesConnect, a purpose-built networking application, aims to bridge gaps between students at Wesleyan University, facilitating a seamless transition into college life and fostering connections designed to last.</p>
-								<p><b style="font-weight:bold;">Project Type: </b>Personal Project </p>
+								<p><b style="font-weight:bold;">Project Type: </b>Personal project </p>
 								<p><b style="font-weight:bold;">Skills: </b>Product design, UX/UI design, UX research</p>
 								<div class="content">
 									<img src="images/wesconnect/banner2.png" style="border-radius: 50px;">
