--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
 				<div class="nav1"> 
 					<!-- <a href="about.html">about</a>  -->
-					<a href="https://drive.google.com/file/d/1DLr-JY2Q9WLJ5xwgRQq7F1Xa01jGMjT5/view?usp=sharing" target="_blank" rel="noreferrer noopener" style="border-bottom: none; float: right;">resume</a>
+					<a href="https://drive.google.com/file/d/1DLr-JY2Q9WLJ5xwgRQq7F1Xa01jGMjT5/view?usp=sharing" target="_blank" rel="noreferrer noopener" style="border-bottom: none; float: right; margin-top:20px;">resume</a>
 					<a href="" style="border-bottom: none; float: right; ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+					<a href="index.html" style="border-bottom: none;"><img src="images/wslogo.png" style="width:12%;"></a>								
 				</div>
 
 
@@ -25,9 +26,9 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
-						<h2 style="text-align: left;">Hi! I'm <a href="about.html">Whitney,</a> a product designer & front-end developer with a passion for bringing people together through inclusive design & technology.</h2>
+						<h2 style="text-align: center;">Hi! I'm <a href="about.html">Whitney,</a> a product designer & front-end developer based in NYC.</h2>
 						<br>
-						<h3>Check out my projects:</h3>
+						<h3 style="text-align: center;">Check out my projects:</h3>
 
 						
 				<!-- Main -->
