--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 								<!-- <p style="width: 50%; min-width: 20em; float: left;margin-left:25px;margin-right: auto;">
 									<br> -->
 									<br>
-									<p style="text-align: center;"><span style="font-size: 1.25em;text-align: center;">Hi, I'm Whitney! A product designer and front-end developer based in NYC. </span></p>
+									<p style="text-align: center;"><span style="font-size: 1.25em;text-align: center;">Hi! I'm Whitney, a product designer and front-end developer based in NYC. </span></p>
 	
 									
 									
